src/css/main.css
/** Reset some basic elements */
body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
hr,
dl,
dd,
ol,
ul,
figure {
  margin: 0;
  padding: 0;
}

/** Basic styling */
body {
  font:
    400 16px/1.5 "Raleway",
    Helvetica,
    Arial,
    sans-serif;
  color: #111;
  background-color: #fdfdfd;
  -webkit-text-size-adjust: 100%;
  -webkit-font-feature-settings: "kern" 1;
  -moz-font-feature-settings: "kern" 1;
  -o-font-feature-settings: "kern" 1;
  font-feature-settings: "kern" 1;
  font-kerning: normal;
}

/** Set `margin-bottom` to maintain vertical rhythm */
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
ul,
ol,
dl,
figure,
.highlight {
  margin-bottom: 15px;
}

/** Images */
img {
  max-width: 100%;
  vertical-align: middle;
}

/** Figures */
figure > img {
  display: block;
}

figcaption {
  font-size: 14px;
}

/** Lists */
ul,
ol {
  margin-left: 30px;
}

li > ul,
li > ol {
  margin-bottom: 0;
}

/** Headings */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
}

/** Links */
a {
  color: #2a7ae2;
  text-decoration: none;
}

a:visited {
  color: #1756a9;
}

a:hover {
  color: #111;
  text-decoration: underline;
}

/** Blockquotes */
blockquote {
  color: #828282;
  border-left: 4px solid #e8e8e8;
  padding-left: 15px;
  font-size: 18px;
  letter-spacing: -1px;
  font-style: italic;
}

blockquote > :last-child {
  margin-bottom: 0;
}

/* Layout */

.wrapper {
  max-width: -webkit-calc(800px - (30px * 2));
  max-width: calc(800px - (30px * 2));
  margin-right: auto;
  margin-left: auto;
  padding-right: 30px;
  padding-left: 30px;
}

@media screen and (max-width: 800px) {
  .wrapper {
    max-width: -webkit-calc(800px - (30px));
    max-width: calc(800px - (30px));
    padding-right: 15px;
    padding-left: 15px;
  }
}

/** Clearfix */
.footer-col-wrapper:after,
.wrapper:after {
  content: "";
  display: table;
  clear: both;
}

/** Icons */
.icon > svg {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: middle;
}

.icon > svg path {
  fill: #828282;
}

/** Site header */
.site-header {
  border-top: 5px solid #424242;
  border-bottom: 1px solid #e8e8e8;
  min-height: 56px;
  position: relative;
}

.site-title {
  font-size: 26px;
  font-weight: 300;
  line-height: 56px;
  letter-spacing: -1px;
  margin-bottom: 0;
  float: left;
}

.site-title,
.site-title:visited {
  color: #424242;
}

.site-nav {
  float: right;
  line-height: 56px;
}

.site-nav .menu-icon {
  display: none;
}

.site-nav .page-link {
  color: #111;
  line-height: 1.5;
}

.site-nav .page-link:not(:last-child) {
  margin-right: 20px;
}

@media screen and (max-width: 600px) {
  .site-nav {
    position: absolute;
    top: 9px;
    right: 15px;
    background-color: #fdfdfd;
    border: 1px solid #e8e8e8;
    border-radius: 5px;
    text-align: right;
  }
  .site-nav .menu-icon {
    display: block;
    float: right;
    width: 36px;
    height: 26px;
    line-height: 0;
    padding-top: 10px;
    text-align: center;
  }
  .site-nav .menu-icon > svg {
    width: 18px;
    height: 15px;
  }
  .site-nav .menu-icon > svg path {
    fill: #424242;
  }
  .site-nav .trigger {
    clear: both;
    display: none;
  }
  .site-nav:hover .trigger {
    display: block;
    padding-bottom: 5px;
  }
  .site-nav .page-link {
    display: block;
    padding: 5px 10px;
    margin-left: 20px;
  }
  .site-nav .page-link:not(:last-child) {
    margin-right: 0;
  }
  .site-nav .button.button-primary {
    background: none;
    color: inherit;
    box-shadow: none;
  }
  .site-nav .button.button-primary:hover {
    text-decoration: underline;
    background: none;
  }
}

/** Site footer */
.site-footer {
  border-top: 1px solid #e8e8e8;
  padding: 30px 0;
}

.footer-heading {
  font-size: 18px;
  margin-bottom: 15px;
}

.site-footer img {
  height: 60px;
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}

.footer-col-wrapper {
  font-size: 15px;
  color: #828282;
  margin-left: -15px;
}

.footer-col {
  float: left;
  margin-bottom: 15px;
  padding-left: 15px;
}

.footer-col-1 {
  width: -webkit-calc(35% - (30px / 2));
  width: calc(35% - (30px / 2));
}

.footer-col-2 {
  width: -webkit-calc(20% - (30px / 2));
  width: calc(20% - (30px / 2));
}

.footer-col-3 {
  width: -webkit-calc(45% - (30px / 2));
  width: calc(45% - (30px / 2));
}

@media screen and (max-width: 800px) {
  .footer-col-1,
  .footer-col-2 {
    width: -webkit-calc(50% - (30px / 2));
    width: calc(50% - (30px / 2));
  }
  .footer-col-3 {
    width: -webkit-calc(100% - (30px / 2));
    width: calc(100% - (30px / 2));
  }
}

@media screen and (max-width: 600px) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (30px / 2));
    width: calc(100% - (30px / 2));
  }
}

/** Page content */

.page-header {
  font-size: 20px;
}

.page-content {
  padding: 30px 0;
  position: relative;
}

/** Events */

.event {
  position: relative;
}

.event-list {
  margin-left: 0;
  list-style: none;
}

.event-list > li {
  margin-bottom: 30px;
}

.event-meta {
  font-size: 14px;
  color: #828282;
}

.event-link {
  display: block;
  font-size: 24px;
}

.event-speakers-name {
  color: grey;
}

.event-header {
  margin-bottom: 30px;
}

.event-date {
  margin: 10px 0 0 0;
  padding: 0;
}

.event-time {
  line-height: 18px;
}

.event-time,
.event-speakers-name {
  margin: 0;
  color: #a6a6a6;
}

.event-title {
  font-size: 42px;
  letter-spacing: -1px;
  line-height: 1;
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  width: 75%;
}

@media screen and (max-width: 800px) {
  .event-title {
    font-size: 36px;
    width: 70%;
  }
}

@media screen and (max-width: 600px) {
  .event-title {
    width: 50%;
  }
}

.event-content {
  margin-bottom: 30px;
}

.event-content h2 {
  font-size: 32px;
}

@media screen and (max-width: 800px) {
  .event-content h2 {
    font-size: 28px;
  }
}

.event-content h3 {
  font-size: 26px;
}

@media screen and (max-width: 800px) {
  .event-content h3 {
    font-size: 22px;
  }
}

.event-content h4 {
  font-size: 20px;
}

@media screen and (max-width: 800px) {
  .post-content h4 {
    font-size: 18px;
  }
}

.clearfix:before,
.clearfix:after {
  content: " "; /* 1 */
  display: table; /* 2 */
}

.clearfix:after {
  clear: both;
}

.cover {
  height: 320px;
  background-size: cover;
  background-position: center center;
  z-index: 1;
  border-bottom: 1px solid #e8e8e8;
}

@media screen and (max-width: 800px) {
  .cover {
    height: 250px;
  }
}

@media screen and (max-width: 600px) {
  .cover {
    height: 200px;
  }
}

.cover-home {
  background-size: contain;
  background-repeat: no-repeat;
  background-color: #666671;
}

.cover-credit {
  color: #848484;
  font-size: 10px;
  letter-spacing: 1px;
  text-align: right;
  padding-right: 40px;
  display: block;
  margin-top: 5px;
}

.event-square {
  color: white;
  border: 1px solid #372121;
  position: relative;
  background-size: cover;
  background-position: center center;
  width: 30%;
  float: left;
  margin: 20px 20px 0 0;
  height: 100%;
  box-sizing: border-box;
  height: 180px;
  border-radius: 3px;
  background-color: #333;
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.05);
  border: 1px solid #ddd;
  -webkit-tap-highlight-color: transparent;
}

.event-square h2 {
  position: absolute;
  bottom: 0px;
  left: 10px;
  font-size: 20px;
  z-index: 3;
}

.event-square h2 span {
  font-size: 14px;
  display: block;
}

.event-square-overlay {
  z-index: 2;
  position: absolute;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 100%;
  line-height: 25px;
  word-wrap: break-word;
  background-color: rgba(0, 0, 0, 0);
  background-image: -webkit-linear-gradient(
    rgba(15, 20, 31, 0) 0,
    rgba(15, 20, 31, 0.1) 25%,
    rgba(15, 20, 31, 0.8) 100%
  );
  background-image: linear-gradient(rgba(15, 20, 31, 0) 0, rgba(15, 20, 31, 0.1) 25%, rgba(15, 20, 31, 0.8) 100%);
}

@media screen and (max-width: 800px) {
  .event-square {
    margin-right: 10px;
    width: -webkit-calc(50% - (30px / 2));
    width: calc(50% - (30px / 2));
  }
}

@media screen and (max-width: 600px) {
  .event-square {
    float: none;
    width: -webkit-calc(100% - (30px / 2));
    width: calc(100% - (30px / 2));
  }
}

.event-time-heading.fix-top {
  margin-top: -10px;
}

.event-time-heading {
  margin-bottom: 0px;
  margin-top: 20px;
}

.flex-container {
  display: flex;
  flex-flow: row wrap;
  margin-top: 1em;
  margin-bottom: 1em;
}

.speaker-info {
  width: 160px;
  margin: 20px;
}

.speaker-photo {
  height: 160px;
  width: 160px;
  border-radius: 6px;
  background-size: cover;
  box-shadow: 1px 1px 2px 1px #c4c4c4;
}

@media screen and (max-width: 800px) {
  .speaker-photo {
    height: 140px;
    width: 140px;
  }
}

@media screen and (max-width: 600px) {
  .speaker-photo {
    height: 100px;
    width: 100px;
    top: 0px;
  }
}

.button.button-primary {
  color: #ffffff;
  background: #965cb8;
  box-shadow: #324832 0 2px 0 0;
  padding: 10px 16px 8px 16px;
  border-radius: 6px;
  text-decoration: none;
}

.button.button-primary:hover {
  background: #ab82b8;
}

.button-in-page {
  margin: 10px 0px;
  display: inline-block;
}

